# inference

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEGRAPH.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
candle-gen-ltx/: Cargo.toml
candle-gen-ltx/examples/: ltx-txt2video.rs  ltx_av_smoke.rs
candle-gen-ltx/src/: audio_vae.rs  config.rs  connector.rs  gemma.rs  lib.rs  pipeline.rs  text_encoder.rs  transformer.rs  vae.rs  vocoder.rs
candle-gen-ltx/tests/: vae_decode_sweep.rs
candle-gen-ltx/tests/common/: gpu_peak.rs
candle-gen-pulid/: Cargo.toml
candle-gen-pulid/src/: ca.rs  pulid_flux.rs  validate.rs
candle-gen-pulid/src/eva_clip/: mlp.rs  patch_embed.rs
candle-gen-qwen-image/: Cargo.toml
candle-gen-qwen-image/examples/: qwen-image-txt2img.rs
candle-gen-qwen-image/src/: adapters.rs  comfyui.rs  comfyui_vae_validate.rs  control.rs  control_common.rs  control_fun.rs  control_validate.rs  edit.rs  edit_validate.rs  image_processor.rs  lib.rs  rope.rs  transformer.rs  vae.rs  vision_language.rs  vl_tokenizer.rs
candle-gen-sdxl/: Cargo.toml
candle-gen-sdxl/examples/: sdxl-pid-ab.rs  sdxl-txt2img.rs  txt2img.rs
candle-gen-sdxl/src/: adapters.rs  denoise.rs  edit_provider.rs  ip_adapter.rs  ip_provider.rs  lib.rs  loaders.rs  packed_adapters.rs  pipeline.rs  training.rs  weights.rs
candle-gen-sdxl/src/unet/: attention.rs  mod.rs  unet_2d.rs
candle-gen-sdxl/tests/: conformance.rs
crates/audio/candle-audio/: Cargo.toml
crates/audio/candle-audio-acestep/: Cargo.toml
crates/audio/candle-audio-catalog/: Cargo.toml
crates/audio/candle-audio-chatterbox/: Cargo.toml
crates/audio/candle-audio-chatterbox-ve/: Cargo.toml
crates/audio/candle-audio-clap/: Cargo.toml
crates/audio/candle-audio-kokoro/: Cargo.toml
crates/audio/candle-audio-mmaudio/: Cargo.toml
crates/audio/candle-audio-moss-sfx/: Cargo.toml
crates/audio/candle-audio-moss-tts/: Cargo.toml
crates/audio/candle-audio-moss-tts-realtime/: Cargo.toml
crates/audio/candle-audio-openvoice/: Cargo.toml
crates/audio/candle-audio-whisper/: Cargo.toml
crates/bundles/runtime-catalog/: Cargo.toml  README.md
crates/bundles/runtime-cpu/: Cargo.toml  README.md
crates/bundles/runtime-cuda/: Cargo.toml  README.md
crates/bundles/runtime-macos/: Cargo.toml  README.md
crates/llm/candle-llm/: Cargo.toml
imports/candle-gen/: .gitignore  CODEGRAPH.md  CODE_REVIEW_2026-07-01.md  Cargo.toml  README.md
imports/candle-gen/candle-gen/: CODEGRAPH.md  Cargo.toml
imports/candle-gen/candle-gen-bernini/: Cargo.toml
imports/candle-gen/candle-gen-chroma/: Cargo.toml
imports/candle-gen/candle-gen-clip/: Cargo.toml
imports/candle-gen/candle-gen-depth/: Cargo.toml
imports/candle-gen/candle-gen-face/: Cargo.toml
imports/candle-gen/candle-gen-flux/: Cargo.toml
imports/candle-gen/candle-gen-flux2/: Cargo.toml
imports/candle-gen/candle-gen-ideogram/: Cargo.toml
imports/candle-gen/candle-gen-instantid/: Cargo.toml
imports/candle-gen/candle-gen-joycaption/: Cargo.toml
imports/candle-gen/candle-gen-kolors/: Cargo.toml
imports/candle-gen/candle-gen-krea/: Cargo.toml
imports/candle-gen/candle-gen-lens/: Cargo.toml
imports/candle-gen/candle-gen-ltx/: Cargo.toml
imports/candle-gen/candle-gen-pid/: Cargo.toml
imports/candle-gen/candle-gen-prompt-refine/: Cargo.toml
imports/candle-gen/candle-gen-pulid/: Cargo.toml
imports/candle-gen/candle-gen-qwen-image/: Cargo.toml
imports/candle-gen/candle-gen-scail2/: Cargo.toml
imports/candle-gen/candle-gen-sd3/: Cargo.toml
imports/candle-gen/candle-gen-sdxl/: Cargo.toml
imports/candle-gen/candle-gen-seedvr2/: Cargo.toml
imports/candle-gen/candle-gen-sensenova/: Cargo.toml
imports/candle-gen/candle-gen-svd/: Cargo.toml
imports/candle-gen/candle-gen-wan/: Cargo.toml
imports/candle-gen/candle-gen-z-image/: Cargo.toml
imports/candle-gen/scripts/: check-gen-core-skew.sh  package-cuda.ps1
imports/candle-llm/: CODEGRAPH.md  Cargo.toml  README.md  rust-toolchain.toml
imports/candle-llm/src/: config.rs  error.rs  gguf.rs  image.rs  lib.rs  llava.rs  prepare.rs  provider.rs
imports/candle-llm/tests/: batch.rs  bench.rs  breadth.rs  conformance.rs  continuous.rs  gguf.rs  mla.rs  paged.rs  prefix.rs  qwen35.rs  qwen3vl.rs  shard.rs  speculative.rs  thinking.rs  vlm.rs
imports/core-llm/: CODEGRAPH.md  Cargo.toml  README.md
imports/core-llm/core-llm-testkit/: Cargo.toml  README.md
imports/core-llm/src/: cancel.rs  capabilities.rs  constraint.rs  lib.rs  message.rs  output.rs  paging.rs  prefix.rs  prepare.rs  registry.rs  request.rs  speculative.rs  template.rs  text_llm.rs  thinking.rs  tokenizer.rs  tool.rs
imports/mlx-gen/: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODEGRAPH.md  Cargo.toml  README.md
imports/mlx-gen/.cargo/: config.toml
imports/mlx-gen/docs/: HANDOFF_EPIC3040.md  WANVACE_PORT_SPEC.md
imports/mlx-gen/gen-core/: Cargo.toml
imports/mlx-gen/gen-core-testkit/: Cargo.toml
imports/mlx-gen/mlx-gen-anima/: Cargo.toml
imports/mlx-gen/mlx-gen-boogu/: Cargo.toml
imports/mlx-gen/mlx-gen-clip/: Cargo.toml
imports/mlx-gen/mlx-gen-face/: Cargo.toml
imports/mlx-gen/mlx-gen-flux/: Cargo.toml
imports/mlx-gen/mlx-gen-flux2/: Cargo.toml
imports/mlx-gen/mlx-gen-ideogram/: Cargo.toml
imports/mlx-gen/mlx-gen-instantid/: Cargo.toml
imports/mlx-gen/mlx-gen-kolors/: Cargo.toml
mlx-gen-joycaption/: Cargo.toml
mlx-gen-joycaption/src/: lib.rs  model.rs
mlx-gen-ltx/: Cargo.toml
mlx-gen-ltx/src/: adapters.rs  config.rs  convert.rs  enhance.rs  gemma.rs  lib.rs  model.rs  pipeline.rs  rope.rs  text_encoder.rs  tokenizer.rs  training.rs  transformer.rs  vae.rs  vocoder.rs
mlx-gen-ltx/tests/: bf16_sdpa_bug.rs  convert_parity.rs  dit_parity.rs  e2e_parity.rs  lora_real_weights.rs  perf.rs  pipeline_parity.rs  registration.rs  sequential_residency_real_weights.rs  te_parity.rs  trainer_e2e.rs  vae_decode_sweep.rs
mlx-gen-prompt-refine/: Cargo.toml
mlx-gen-prompt-refine/examples/: refine.rs
mlx-gen-prompt-refine/src/: llama.rs  model.rs
(+3334 files in other folders)
