[workspace]
resolver = "2"
members = [
    "crates/contracts/core-llm",
    "crates/contracts/core-llm/core-llm-testkit",
    "crates/llm/candle-llm",
    "crates/llm/mlx-llm",
    "crates/llm/mlx-llm/server",
    "crates/media/mlx-gen",
    "crates/media/mlx-gen/gen-core",
    "crates/media/mlx-gen/gen-core-testkit",
    "crates/media/mlx-gen/mlx-gen-*",
    "crates/media/candle-gen/candle-gen*",
]
exclude = [
    "crates/media/candle-gen/vendor/candle-kernels",
]

# Internal packages are paths so a checkout has one contract package, one
# provider registry, and no dependency on unpublished repository state.
[workspace.dependencies]
core-llm = { path = "crates/contracts/core-llm" }
core-llm-testkit = { path = "crates/contracts/core-llm/core-llm-testkit" }
mlx-llm = { path = "crates/llm/mlx-llm" }
candle-llm = { path = "crates/llm/candle-llm" }
sceneworks-gen-core = { path = "crates/media/mlx-gen/gen-core" }
sceneworks-gen-core-testkit = { path = "crates/media/mlx-gen/gen-core-testkit" }

# MLX fork pins are unchanged from the imported repositories.
mlx-rs = { package = "pmetal-mlx-rs", git = "https://github.com/michaeltrefry/mlx-rs", rev = "38e1cc1730a11b1e40c2c8ecda01606763a12d51" }
mlx-sys = { package = "pmetal-mlx-sys", git = "https://github.com/michaeltrefry/mlx-rs", rev = "38e1cc1730a11b1e40c2c8ecda01606763a12d51" }

# Candle pins are unchanged and shared by media and LLM providers.
candle-core = { git = "https://github.com/huggingface/candle", rev = "c1e6756a89faefa888ea57b056394a0619925b87" }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "c1e6756a89faefa888ea57b056394a0619925b87" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "c1e6756a89faefa888ea57b056394a0619925b87" }
candle-flash-attn = { git = "https://github.com/huggingface/candle", rev = "c1e6756a89faefa888ea57b056394a0619925b87" }

thiserror = "2"
inventory = "0.3"
serde_json = "1"
safetensors = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
rand = "0.9"
rand_distr = "0.5"

# Preserve Candle's dependency optimization for debug/test parity suites.
[profile.dev.package."*"]
opt-level = 3

# Preserve the vendored multi-architecture CUDA kernel override.
[patch."https://github.com/huggingface/candle"]
candle-kernels = { path = "crates/media/candle-gen/vendor/candle-kernels" }
