[package]
name = "candle-gen-qwen-image"
version = "0.0.0"
edition = "2021"
description = "Qwen-Image provider crate for candle-gen — the Windows/CUDA sibling of mlx-gen-qwen-image."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/candle-gen"
keywords = ["candle", "cuda", "diffusion", "qwen-image", "inference"]
categories = ["science"]

[dependencies]
candle-gen = { path = "../candle-gen" }
# NVIDIA PiD optional super-resolving decoder (epic 7840 / sc-7853): the `qwenimage` latent-space
# student is the FIRST product-bearing PiD path (Qwen-Image + Krea). Wired behind `req.use_pid`
# (default off → byte-exact native QwenVae decode).
candle-gen-pid = { path = "../candle-gen-pid" }
inventory = { workspace = true }
# Deterministic CPU-seeded initial noise (sc-3673 parity).
rand = { workspace = true }
rand_distr = { workspace = true }
serde_json = "1"
# Read adapter `.safetensors` header metadata (`networkType`/`rank`/`alpha` + the diffusers
# `lora_adapter_metadata` blob) for the inference LoRA/LoKr merge (sc-6220); candle's tensor loader
# drops the `__metadata__`. Already in the workspace lock via candle.
safetensors = "0.7"

[features]
default = []
metal = ["candle-gen/metal", "candle-gen-pid/metal"]
cuda = ["candle-gen/cuda", "candle-gen-pid/cuda"]

[dev-dependencies]
# Shared test-support helpers (sc-9055 / F-069: candle_gen::testkit).
candle-gen = { path = "../candle-gen", features = ["testkit"] }
image = { version = "0.25", default-features = false, features = ["png"] }
sceneworks-gen-core-testkit = { workspace = true }
