[package]
name = "mlx-gen-prompt-refine"
version = "0.0.0"
edition = "2021"
description = "Prompt-refinement instruction-LLM provider for mlx-gen — native MLX Llama-3.2-3B-Instruct implementing the gen-core TextLlm contract (sc-5552, MLX twin of candle-gen-prompt-refine). Retires the worker's prompt_refine.py."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "llama", "llm", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# config.json parsing (matches the sdxl/wan/ltx/flux2/lens provider convention: serde_json::Value, no derive).
serde_json = "1"
# Link-time self-registration into mlx-gen's textllm registry.
inventory = { workspace = true }

[dev-dependencies]
# Backend-neutral TextLlm contract conformance suite (epic 3720, sc-5500): the macos-mlx lane runs
# prompt_refine through it as the "one real provider per contract" AC. Weight-gated (#[ignore]).
sceneworks-gen-core-testkit = { workspace = true }
